[package]
name = "nats-handling"
version = "0.1.3"
edition = "2021"
authors = ["Oleg Pogoraev <contact@oblivisheee.me"]
description = "An easy-to-use async NATS client library"
license = "MIT"
repository = "https://github.com/oblivisheee/nats-handling"
documentation = "https://docs.rs/nats-handling"
keywords = ["async", "nats", "client", "library"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-nats = "0.38.0"
async-trait = "0.1.85"
bytes = "1.9.0"
futures = "0.3.31"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
