[package]
name = "nats-handling"
version = "0.1.4"
edition = "2021"
authors = ["Oleg Pogoraev <contact@oblivisheee.me"]
description = "An easy-to-use async NATS client library"
license = "MIT"
repository = "https://github.com/oblivisheee/nats-handling"
documentation = "https://docs.rs/nats-handling"
keywords = ["async", "nats", "client", "library"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-nats = "0.40.0"
async-trait = "0.1.88"
bytes = "1.10.1"
futures = "0.3.31"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "signal"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
